examples/errors/wrong_return_expr.alan
main(): proc

    foo(): int
    {
        return 'c';
    }

{

}